2005-03-13(jol):
	- XmppIM protocole can be now registered/allocated/...
	

2005-03-06(jol):
	- Add xmpp_presence file that provides function to send notification message.
	- Add some opcode support.
	- Some test around the gui.
	
2005-03-03(jol):
	- Add a begin to the interface (only a transparent background with its container).
	- Its just a first look at the evas and esmart api.
	- Update configure.ac to check for evas, esmart abd edje.
	- Fix a problem inside the xmpp_im_contact_remove_all_group.
	- Add xmpp_jid_get_bar and xmpp_jid_get_full.
	- Add GPL license within some files.
	
2005-02-28(jol):
	- Just a first implementation of the Roster, Group and Contact
	- Give an test example to check memory leak and the behavior of the new code
	
2005-02-24(jol):
	- Fix the bug ! The message was not correctly remove from the child list
	of a message. The reason is that i didn't use correctly the ecore_list functions.
	- Add some helpful functions.
	- Now we are authentifiate near the server.
	
2005-02-20(jol):
	- add egxp_message_root allowing to get the root message of a message.
	- try to fix memory leaks and a dirty segfault.
	- The segfault is always here i'm hunting it !
	- add sha1 support to use with password.
	
2005-02-19(jol):
	- Fix memory leaks
	- rename egxp_opcode_display to egxp_opcode_print
	- fix the egxp_opcode_add, when you try to add an existing element it is not added
	  and it return the good id.
	- in the xmpp/test place the egxp_free before the ecore_shutdown.
	
2005-02-18(jol):
	- Try to fix some memory leaks
	
2005-02-15(jol):
	- now it's possible to connect to a server
	- add the xmpp_auth file which should handle authentification process
	- The first step of authentification is done
	
2005-02-13(jol):
	- Add connection control inside egxp. So it's now possible to connect/disconnect 
	  and get/send message to a server.
	- Add a first support to jid (malloc and free :)
	- Add a beginning to send xmpp message.