@@ -1,0 +1,16 @@
+#ifndef xmpp_im_opcode_header_
+#define xmpp_im_opcode_header_
+
+#include "egxp/egxp.h"
+
+/**
+ * Initialize all opcode of the xmpp_im protocol
+ * @param eg: The egxp structure
+ */
+void xmpp_im_opcode_init (Egxp *eg);
+
+
+
+
+
+#endif
